/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.5'
    api 'mysql:mysql-connector-java:8.0.33'
    api 'org.springframework.boot:spring-boot-starter-web:3.1.2'
    api 'org.projectlombok:lombok:1.18.24'
    api 'org.springframework.boot:spring-boot-starter-validation:3.0.5'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools:3.0.5'    
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.5'
}

group = 'com.victor'
version = '0.0.1-SNAPSHOT'
description = 'crud-spring'
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes("Main-Class": "com.victor.crudspring.CrudSpringApplication",
                "Implementation-Title": "crud-spring",
                "Implementation-Version": 1.0)
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
}
